Fixed alignment for h1 in header

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,6 +15,7 @@ body {
   @include sectioned-boxes(80px);
   .header__inner {
     @include sectioned-boxes-inner(row, $background-color, space-between);
+    align-items: center;
   }
   .header__h1 {
     color: $title-text-color;
